# internal/api/models.go
@@ -3,8 +3,8 @@ package api
 import "time"
 
 type UserRegisterRequest struct {
-	Login    string `json:"login" example:"user@example.com"`
-	Password string `json:"password" example:"password"`
+	Login    string `json:"login" example:"user@example.com" binding:"required"`
+	Password string `json:"password" example:"password" binding:"required"`
 }
 
 type orderStatus string
